--- a/views/updatePost.handlebars
+++ b/views/updatePost.handlebars
@@ -6,32 +6,32 @@
             <div class="card-body">
                 <div class="row">
                     {{#if post.isCurrentUser}}
-                        <div class="col-12">
-                            <p class="mt-5">
-                                <form id="updatePost" method="post" action="/api/updatepost">
-                                    {{!-- Below must be hidden as it passes in what post we are updating and we don't want
+                    <div class="col-12">
+                        <p class="mt-5">
+                            <form id="updatePost" method="post" action="/api/updatepost">
+                                {{!-- Below must be hidden as it passes in what post we are updating and we don't want
                                 users to change it --}}
-                                    <input name="id" type="hidden" value="{{post.id}}">
-                                    <label for="breed">Breed</label>
-                                    <select name="breed">
-                                        <option value="golden_doodle">Golden Doodle</option>
-                                        <option value="bulldog">Bulldog</option>
-                                    </select>
-                                    <label for="post_type">Post Type</label>
-                                    <select name="post_type">
-                                        <option value="Dog Post">Dog Post</option>
-                                        <option value="Meet Up">Meet Up</option>
-                                    </select>
-                                    <div class="form-group">
-                                        <label for="text">Post:</label>
-                                        <textarea id="text" name="text" rows="8" cols="40"></textarea>
-                                        <input class="btn btn-success newPostSubmit" type="submit" value="Update Post" />
-                                </form>
-                                <input class="btn btn-danger deletePost" data-id="{{post.id}}" type="submit" value="Delete Post" />
-                                <br>
-                                <a href="/">← Back To Home</a>
-                            </p>
-                        </div>
+                                <input name="id" type="hidden" value="{{post.id}}">
+                                <label for="breed">Breed</label>
+                                <select name="breed">
+                                    <option value="golden_doodle">Golden Doodle</option>
+                                    <option value="bulldog">Bulldog</option>
+                                </select>
+                                <label for="post_type">Post Type</label>
+                                <select name="post_type">
+                                    <option value="Dog Post">Dog Post</option>
+                                    <option value="Meet Up">Meet Up</option>
+                                </select>
+                                <div class="form-group">
+                                    <label for="text">Post:</label>
+                                    <textarea id="text" name="text" rows="8" cols="40"></textarea>
+                                    <input class="btn btn-success newPostSubmit" type="submit" value="Update Post" />
+                            </form>
+                            <input class="btn btn-danger deletePost" data-id="{{post.id}}" type="submit" value="Delete Post" />
+                            <br>
+                            <a href="/">← Back To Home</a>
+                        </p>
+                    </div>
                     {{/if}}
                 </div>
             </div>
@@ -40,51 +40,49 @@
 </div>
 
 
-<footer class="page-footer blue fixed-bottom scrolling-footer" id="navbar">
+<div class="footer-margin">
+    <footer class="page-footer blue fixed-bottom scrolling-footer" id="navbar">
 
-    <ul class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
 
-            <a href="/" class="mx-1">
-                <button class="btn btn-secondary btn-lg nav-btn">
-                    Home
-                    <br />
-                    <i class="fas fa-paw fa-5px"></i>
-                    <i class="fas fa-paw fa-5px"></i>
-                </button>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a href="/posts" class="mx-1">
-                <button class="btn btn-secondary btn-lg nav-btn">
-                    New Post
-                    <br />
-                    <i class="fas fa-pen-fancy fa-5px"></i>
-                    <i class="fas fa-pen-fancy fa-5px"></i>
-                </button>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a href="/allposts" class="mx-1">
-                <button class="btn btn-secondary btn-lg nav-btn">
-                    View All Posts
-                    <br />
-                    <i class="fas fa-bone fa-5px"></i>
-                    <i class="fas fa-bone fa-5px"></i>
-                </button>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a href="/lostdogs" class="mx-1">
-                <button class="btn btn-secondary btn-lg nav-btn">
-                    Lost Dogs
-                    <br />
-                    <i class="fas fa-location-arrow fa-5px"></i>
-                    <i class="fas fa-location-arrow fa-5px"></i>
-                </button>
-            </a>
-        </li>
-    </ul>
-</footer>
+                <a href="/" class="mx-1">
+                    <button class="btn btn-secondary btn-lg nav-btn">
+                        Home
+                        <br />
+                        <i class="fas fa-paw fa-5px"></i>
+                    </button>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="/posts" class="mx-1">
+                    <button class="btn btn-secondary btn-lg nav-btn">
+                        New Post
+                        <br />
+                        <i class="fas fa-pen-fancy fa-5px"></i>
+                    </button>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="/allposts" class="mx-1">
+                    <button class="btn btn-secondary btn-lg nav-btn">
+                        View All Posts
+                        <br />
+                        <i class="fas fa-bone fa-5px"></i>
+                    </button>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="/lostdogs" class="mx-1">
+                    <button class="btn btn-secondary btn-lg nav-btn">
+                        Lost Dogs
+                        <br />
+                        <i class="fas fa-location-arrow fa-5px"></i>
+                    </button>
+                </a>
+            </li>
+        </ul>
+    </footer>
+</div>
 
 <script src="/js/updatePost.js" type="text/javascript"></script>
