--- a/public/styles/updateDog.css
+++ b/public/styles/updateDog.css
@@ -1,5 +1,6 @@
 .dog-name {
-    font-size: 58px;
+    font-size: 78px;
+    font-family: 'Concert One', cursive;    
 }
 
 body {
@@ -29,5 +30,28 @@ body {
 .update-name-label {
     font-size: 50px;
     font-family: 'Concert One', cursive;
-    font-weight: 800;
+    font-weight: 100;
+}
+
+.btn-file {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 30px;
+    height: 55px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.btn-custom {
+    display: block;
+    width: 100%;
+    height: 55px;
+    font-size: 30px;
+    border-radius: 10px;
+    margin-top: 25px;
+}
+
+.lost-delete-margin {
+    margin: 0;
 }
