--- a/views/updateDog.handlebars
+++ b/views/updateDog.handlebars
@@ -33,7 +33,7 @@
                         </form>
                         <br>
                         <input class="btn btn-danger deleteDog btn-custom lost-delete-margin" data-id="{{dog.id}}" type="submit" value="Delete Dog" />
-                        <button class="btn btn-secondary lostDog btn-custom lost-delete-margin" data-toggle="modal" data-target="#lostDogModal">
+                        <button class="btn btn-secondary lostDog btn-custom lost-delete-margin">
                             {{dog.dog_name}} is Lost!
                         </button>
                     </p>
@@ -89,7 +89,7 @@
     </footer>
 </div>
 
-<div class="modal" tabindex="-1" id="lostDogModal">
+<div class="modal fade" id="lostDogModal" tabindex="-1">
     <div class="modal-content text-center">
         <div class="modal-body">
             <form id="lostDog" method="post" action="/api/lostdog">
@@ -106,6 +106,5 @@
         </div>
     </div>
 </div>
-
 
 <script src="/js/updateDog.js" type="text/javascript"></script>
