--- a/views/lostDogs.handlebars
+++ b/views/lostDogs.handlebars
@@ -1,45 +1,46 @@
 <link rel="stylesheet" href="/styles/navbar.css">
+<link rel="stylesheet" href="/styles/lostDogs.css">
 
-<style>
-    .mp-reset {
-        margin: 0;
-        padding: 0;
-    }
-</style>
-
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-8 offset-2">
-            <h2 class="text-center">Lost Dogs!</h2>
-            <div class="row">
-                {{#each lostDogArray}}
-                <div class="card mt-4 col-12">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-6">
-                                <h3 class="text-center">{{this.name}}</h3>
-                                <div class="text-center">
-                                    {{cloudinaryIMG this.picture width=150 height=150}}
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <p class="mp-reset">{{this.breed}}</p>
-                                <p class="mp-reset"><strong>Contact: </strong>{{this.ownerName}}</p>
-                                <p class="mp-reset"><strong>Phone Number: </strong>{{this.phone}}</p>
-                                <p class="mp-reset"><strong>From: </strong>{{this.zip}}</p>
-                                <p class="mp-reset">{{this.text}}</p>
-                                {{#if this.ownDog}}
-                                <button class="foundDog btn btn-primary" value="{{this.id}}">Found them!</button>
-                                {{/if}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {{/each}}
-            </div>
+        <div class="col-sm-12 text-center">
+            <div class="header">Lost Dogs</div>
         </div>
     </div>
+    <div class="row">
+        {{#each lostDogArray}}
+        <div class="card mt-4 col-12">
+            <div class="card-title">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="text-center dog-name">{{this.name}}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body description mb-2">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="text-center">
+                            {{cloudinaryIMG this.picture width=250 height=250}}
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <p class="mp-reset">{{this.breed}}</p>
+                        <p class="mp-reset"><strong>Contact: </strong>{{this.ownerName}}</p>
+                        <p class="mp-reset"><strong>Phone Number: </strong>{{this.phone}}</p>
+                        <p class="mp-reset"><strong>From: </strong>{{this.zip}}</p>
+                        <p class="mp-reset">{{this.text}}</p>
+                        {{#if this.ownDog}}
+                        <button class="foundDog btn btn-primary" value="{{this.id}}">Found them!</button>
+                        {{/if}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
 </div>
+
 <div class="footer-margin">
     <footer class="page-footer blue fixed-bottom scrolling-footer" id="navbar">
 
