Lost Dog fully styled

--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 text-center">
-            <div id="header">Your Dogos</div>
+            <div id="header">Your Dogs</div>
         </div>
     </div>
     <div class="row">
@@ -20,51 +20,51 @@
     </div>
     <br>
     {{#each userDogsArray}}
-    <div class="row">
-        <div class="col-sm-5">
-            <div id="profile" class="card-header">
-                {{cloudinaryIMG this.picture width=250 height=250}}
+        <div class="row">
+            <div class="col-sm-5">
+                <div id="profile" class="card-header">
+                    {{cloudinaryIMG this.picture width=250 height=250}}
+                </div>
+            </div>
+
+            <div class="col-sm-7">
+                <div class="card-body mp-reset">
+                    <p class="float-right">
+                        {{#if ../userProfile.isCurrentUser}}
+                            <a href="/dog/{{this.id}}" class="btn btn-info btn-lg">
+                                <i class="fas fa-cog fa-2x"></i>
+                                <span class="button-text">Edit Dog</span>
+                            </a>
+                        {{/if}}
+                        <br>
+                    </p>
+
+                    <h3 class="card-title full-width"> {{this.name}} </h3>
+
+                    <p class="card-text">
+                        <i class="fas fa-dog fa-3x float-left"> </i>
+                        <span class="dog-text full-width">
+                            {{this.breed}}
+                        </span>
+                    </p>
+
+                    <p class="card-text">
+                        <i class="fas fa-circle fa-3x float-left"> </i>
+                        <span class="dog-text full-width">
+                            {{this.gender}}
+                        </span>
+                    </p>
+
+                    <p class="card-text">
+                        <i class="fas fa-sticky-note fa-3x float-left"></i>
+                        <span class="dog-text full-width">
+                            {{this.note}}
+                        </span>
+                    </p>
+                </div>
             </div>
         </div>
-
-        <div class="col-sm-7">
-            <div class="card-body mp-reset">
-                <p class="float-right">
-                    {{#if ../userProfile.isCurrentUser}}
-                    <a href="/dog/{{this.id}}" class="btn btn-info btn-lg">
-                        <i class="fas fa-cog fa-2x"></i>
-                        <span class="button-text">Edit Dog</span>
-                    </a>
-                    {{/if}}
-                    <br>
-                </p>
-
-                <h3 class="card-title full-width"> {{this.name}} </h3>
-
-                <p class="card-text">
-                    <i class="fas fa-dog fa-3x float-left"> </i>
-                    <span class="dog-text full-width">
-                        {{this.breed}}
-                    </span>
-                </p>
-
-                <p class="card-text">
-                    <i class="fas fa-circle fa-3x float-left"> </i>
-                    <span class="dog-text full-width">
-                        {{this.gender}}
-                    </span>
-                </p>
-
-                <p class="card-text">
-                    <i class="fas fa-sticky-note fa-3x float-left"></i>
-                    <span class="dog-text full-width">
-                        {{this.note}}
-                    </span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <hr />
+        <hr />
     {{/each}}
 </div>
 
