--- a/public/styles/lostDogs.css
+++ b/public/styles/lostDogs.css
@@ -26,3 +26,16 @@ body {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.post-text {
+    font-size: 30px;
+}
+
+.btn-custom {
+    width: 100%;
+    font-size: 32px;
+}
+
+.swal2-popup { 
+    font-size: 2.5rem ! important;
+}
