--- a/views/lostDogs.handlebars
+++ b/views/lostDogs.handlebars
@@ -9,34 +9,34 @@
     </div>
     <div class="row">
         {{#each lostDogArray}}
-        <div class="card mt-4 col-12">
-            <div class="card-title">
-                <div class="row">
-                    <div class="col-12">
-                        <h3 class="text-center dog-name">{{this.name}}</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="card-body description mb-2">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="text-center">
-                            {{cloudinaryIMG this.picture width=250 height=250}}
+            <div class="card mt-4 col-12">
+                <div class="card-title">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="text-center dog-name">{{this.name}}</h3>
                         </div>
                     </div>
-                    <div class="col-8">
-                        <p class="mp-reset">{{this.breed}}</p>
-                        <p class="mp-reset"><strong>Contact: </strong>{{this.ownerName}}</p>
-                        <p class="mp-reset"><strong>Phone Number: </strong>{{this.phone}}</p>
-                        <p class="mp-reset"><strong>From: </strong>{{this.zip}}</p>
-                        <p class="mp-reset">{{this.text}}</p>
-                        {{#if this.ownDog}}
-                        <button class="foundDog btn btn-primary" value="{{this.id}}">Found them!</button>
-                        {{/if}}
+                </div>
+                <div class="card-body description mb-2">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="text-center">
+                                {{cloudinaryIMG this.picture width=250 height=250}}
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <p class="mp-reset post-text">{{this.breed}}</p>
+                            <p class="mp-reset post-text"><strong>Contact: </strong>{{this.ownerName}}</p>
+                            <p class="mp-reset post-text"><strong>Phone Number: </strong>{{this.phone}}</p>
+                            <p class="mp-reset post-text"><strong>From: </strong>{{this.zip}}</p>
+                            <p class="mp-reset post-text">{{this.text}}</p>
+                            {{#if this.ownDog}}
+                                <button class="foundDog btn btn-primary btn-custom" value="{{this.id}}">Found them!</button>
+                            {{/if}}
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         {{/each}}
     </div>
 </div>
