--- a/views/updateDog.handlebars
+++ b/views/updateDog.handlebars
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <h3 class="header text-center">Edit Doggo!</h3>
+            <h3 class="header text-center">Edit Dog!</h3>
             <div class="row dog-content">
                 <div class="col-6 text-center">
                     <div class="dog-name">
@@ -16,28 +16,30 @@
                     {{cloudinaryIMG dog.photo_url width=350 height=350}}
                 </div>
                 {{#if dog.isCurrentUser}}
-                <div class="col-6">
-                    <p class="mt-5">
-                        <form id="updateDog" class="text-center" method="post" action="/api/updatedog" enctype="multipart/form-data">
-                            {{!-- Below must be hidden as it passes in what dog we are updating and we don't want
+                    <div class="col-6">
+                        <p class="mt-5">
+                            <form id="updateDog" class="text-center" method="post" action="/api/updatedog" enctype="multipart/form-data">
+                                {{!-- Below must be hidden as it passes in what dog we are updating and we don't want
                                     users to change it --}}
-                            <input name="id" type="hidden" value="{{dog.id}}">
-                            <label for="dog_name" class="update-name-label">Update Name</label>
-                            <input name="dog_name" class="updatedDogName" type="text" />
-                            <br><br>
-                            <label class="btn btn-info btn-file">
-                                Update Your Doggo's Photo <input class="fileUpload" name="dog_photo" type="file" style="display: none;">
-                            </label>
+                                <input name="id" type="hidden" value="{{dog.id}}">
+                                <label for="dog_name" class="update-name-label">Update Name</label>
+                                <input name="dog_name" class="updatedDogName" type="text" />
+                                <br><br>
+                                <label class="btn btn-info btn-file">
+                                    Update Your Dog's Photo <input class="fileUpload" name="dog_photo" type="file" style="display: none;">
+                                </label>
 
-                            <input class="btn btn-success newDogSubmit btn-custom" type="submit" value="Update Doggo" />
-                        </form>
-                        <br>
-                        <input class="btn btn-danger deleteDog btn-custom lost-delete-margin" data-id="{{dog.id}}" type="submit" value="Delete Dog" />
-                        <button class="btn btn-secondary lostDog btn-custom lost-delete-margin" data-id="{{dog.id}}" data-breed="{{dog.breed}}" data-name="{{dog.dog_name}}">
-                            {{dog.dog_name}} is Lost!
-                        </button>
-                    </p>
-                </div>
+                                <input class="btn btn-success newDogSubmit btn-custom" type="submit" value="Update Dog" />
+                            </form>
+                            <br>
+                            <input class="btn btn-danger deleteDog btn-custom lost-delete-margin" data-id="{{dog.id}}" type="submit"
+                                value="Delete Dog" />
+                            <button class="btn btn-secondary lostDog btn-custom lost-delete-margin" data-id="{{dog.id}}" data-breed="{{dog.breed}}"
+                                data-name="{{dog.dog_name}}">
+                                {{dog.dog_name}} is Lost!
+                            </button>
+                        </p>
+                    </div>
                 {{/if}}
             </div>
         </div>
