--- a/views/createDog.handlebars
+++ b/views/createDog.handlebars
@@ -22,14 +22,14 @@
                     <option value="female">Female</option>
                 </select>
                 <br>
-                <label class="btn btn-primary btn-file">
+                <label class="btn btn-custom btn-file">
                     Upload Your Dog's Photo <input class="fileUpload" name="dog_photo" type="file" style="display: none;">
                 </label>
                 <br>
-                <label for="dog_note" class="note-label text-center">What are they like?</label>
+                <label for="dog_note" class="note-label text-center">What's your dog like?</label>
                 <textarea class="dog-note" id="dogNotes" name="dog_note"></textarea>
                 <br />
-                <button class="btn btn-primary add-dog" type="submit">
+                <button class="btn btn-custom add-dog" type="submit">
                     Add Dog
                 </button>
             </form>
