--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -32,7 +32,7 @@
                     <textarea class="post-text" name="text" rows="8" cols="40" placeholder="Type your post here!"></textarea>
                 </div>
 
-                <input class="btn btn-primary newPostSubmit" type="submit" value="Post" />
+                <input class="btn btn-custom newPostSubmit" type="submit" value="Post" />
             </form>
         </div>
     </div>
