--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-8 offset-2">
             <img src="https://cdn.dribbble.com/users/1055986/screenshots/3424194/doberman-walk.gif" alt="Dancin Dauschand">
-            <h1 class="header"> Sign-In </h1>
+            <h1 class="header text-center">Sign-In</h1>
             <br>
             <br>
             <br>
@@ -17,7 +17,7 @@
                 <br />
                 <div class="row">
                     <div class="col-12 text-center">
-                        <button type="submit" class="btn btn-lg btn-primary custom-btn">Sign In</button>
+                        <button type="submit" class="btn btn-lg sign-in-btn custom-btn">Sign In</button>
                     </div>
                 </div>
             </form>
