--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -24,7 +24,7 @@
                 {{!-- <label for="password">Password</label> --}}
                 <input name="password" class="form-input" type="password" placeholder="Password" />
                 <br />
-                <input class="btn btn-primary btn-lg" id="submit" type="submit" value="Sign Up" />
+                <input class="btn btn-success btn-lg" id="submit" type="submit" value="Submit" />
             </form>
 
         </div>
