--- a/public/styles/createPost.css
+++ b/public/styles/createPost.css
@@ -1,7 +1,7 @@
 .header {
     font-family: 'Fredoka One', cursive;
     text-shadow: 4px 4px black;
-    color: rgb(224, 155, 150);
+    color: rgb(248, 171, 166);
     text-align: center;
     font-size: 7em;
     margin-top: 75px;
@@ -46,4 +46,9 @@ body {
     height: 100px;
     font-size: 38px;
     border-radius: 15px;
+}
+
+.btn-custom {
+    background: rgb(248, 171, 166);
+    font-weight: 600;
 }
