--- a/public/styles/lostDogs.css
+++ b/public/styles/lostDogs.css
@@ -8,12 +8,12 @@ body {
 }
 
 .header {
-    margin-top: 100px;;
-    color: rgb(2, 2, 117);
+    margin-top: 100px;
+    color: rgb(67, 155, 167);
+    text-shadow: 5px 2px rgb(149, 181, 240);
     align-content: center;
     font-size: 7em;
     font-family: 'Fredoka One', cursive;
-    text-shadow: 5px 2px rgb(149, 181, 240);
 }
 
 .dog-name {
