--- a/public/styles/updateDog.css
+++ b/public/styles/updateDog.css
@@ -8,11 +8,11 @@ body {
 }
 
 .header {
-    color: rgb(2, 2, 117);
+    color: rgb(67, 155, 167);
+    text-shadow: 5px 2px rgb(149, 181, 240);
     margin-top: 85px;
     font-size: 7em;
     font-family: 'Fredoka One', cursive;
-    text-shadow: 5px 2px rgb(149, 181, 240);
 }
 
 .dog-content {
@@ -37,25 +37,22 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    font-size: 30px;
-    height: 55px;
-    width: 100%;
-    border-radius: 10px;
 }
 
 .btn-custom {
-    display: block;
-    width: 100%;
-    height: 55px;
-    font-size: 30px;
+    width: 75%;
+    font-size: 38px;
     border-radius: 10px;
     margin-top: 25px;
-}
-
-.lost-delete-margin {
-    margin: 0;
+    margin-bottom: 0;
 }
 
 .swal2-popup { 
     font-size: 2.5rem ! important;
+}
+
+.update-dog-submit {
+    background: #536CB5;
+    border-radius: 10;
+    border: 0;
 }
