--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,14 +13,16 @@
       </div>
     </div>
     <div class="row">
-      <div class="offset-2 col-4 float-right">
+      <div class="col-12">
         <a href="/signin"><button type="button" class="btn btn-primary btn-lg home-btn">
             Sign In
           </button>
         </a>
       </div>
+    </div>
 
-      <div class="col-4 float-left">
+    <div class="row">
+      <div class="col-12">
         <a href="/signup">
           <button type="button" class="btn btn-secondary btn-lg home-btn">
             Sign Up
@@ -30,9 +32,6 @@
     </div>
   </div>
 </div>
-</div>
-
-
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
